user list page gui

--- a/frontend/app/nav-bar.component.html
+++ b/frontend/app/nav-bar.component.html
@@ -1,26 +1,19 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="#">
-              <img alt="Brand" src="resources/images/vault-icon.png"  class="img-responsive logo box">
-            </a>
-          </div>
-        </div>
-      </nav>
-    </div>
+    <a class="navbar-brand" href="#">
+      <img alt="Brand" src="resources/images/vault-icon.png"  class="img-responsive logo">
+    </a>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
+        <li><a href="#"><h4>Users</h4></a></li>
+        <li><a href="#"><h4>Tags</h4></a></li>
+        <li><a href="#"><h4>Logs</h4></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <li><a href="#"><h4>Add User</h4></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
