updated to latest angular 2; updated to semantic ui

--- a/frontend/app/nav-bar.component.html
+++ b/frontend/app/nav-bar.component.html
@@ -1,20 +1,18 @@
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <a class="navbar-brand" href="#">
-      <img alt="Brand" src="resources/images/vault-icon.png"  class="img-responsive logo">
+<div class="ui inverted fixed menu">
+  <div class="ui secondary pointing menu ">
+    <a class="item" >
+      <img src="resources/images/vault-icon.png" />
     </a>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="#"><h4>Users</h4></a></li>
-        <li><a href="#"><h4>Tags</h4></a></li>
-        <li><a href="#"><h4>Logs</h4></a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><h4>Add User</h4></a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+    <a class="item">
+      Users
+    </a>
+    <a class="item">
+      Tags
+    </a>
+  </div>
+  <div class="right menu ">
+    <a class="item">
+      Add User
+    </a>
+  </div>
+</div>
