--- a/frontend/app/nav-bar.component.html
+++ b/frontend/app/nav-bar.component.html
@@ -3,10 +3,10 @@
     <a class="item" >
       <img src="resources/images/vault-icon.png" />
     </a>
-    <a class="item">
+    <a class="item" [routerLink]="['UserList']">
       Users
     </a>
-    <a class="item">
+    <a class="item" [routerLink]="['TagList']">
       Tags
     </a>
   </div>
