--- a/frontend/app/components/nav-bar.component.html
+++ b/frontend/app/components/nav-bar.component.html
@@ -9,6 +9,9 @@
     <a class="item" [routerLink]="['TagList']">
       Tags
     </a>
+    <a class="item" [routerLink]="['LogList']">
+      Logs
+    </a>
   </div>
   <div class="right menu ">
     <a class="item">
