--- a/frontend/app/components/user-list.component.html
+++ b/frontend/app/components/user-list.component.html
@@ -1,3 +1,15 @@
+<script>
+// jQuery(document).ready(function() {
+//     var searchCondition = '${searchCondition}';
+//
+//     jQuery('.table').DataTable({
+//         "lengthMenu": [[3,5, 10, 25, 50, -1], [3, 5, 10, 25, 50, "All"]],
+//         "oSearch": {"sSearch": searchCondition}
+//     });
+// });
+
+</script>
+
 <div class="container">
   <table class="ui celled striped table">
     <thead>
@@ -17,7 +29,7 @@
       <td>{{user.userName}}</td>
       <td>{{user.uid}}</td>
       <td>phone number</td>
-      <td><a style="cursor: pointer;">delete</a></td>
+      <td><a style="cursor: pointer;" (click)="onDelete(user.userId)">delete</a></td>
     </tr>
     </tbody>
   </table>
