--- a/frontend/app/components/nav-bar.component.html
+++ b/frontend/app/components/nav-bar.component.html
@@ -14,7 +14,7 @@
     </a>
   </div>
   <div class="right menu ">
-    <a class="item">
+    <a class="item" [routerLink]="['AddUser']">
       Add User
     </a>
   </div>
