--- a/frontend/app/components/add-user.component.html
+++ b/frontend/app/components/add-user.component.html
@@ -1,38 +1,45 @@
 <div class="container">
-    <form class="ui form" (ngSubmit)="onSubmit()" #addUserForm="ngForm">
+    <form *ngIf="!userAdded" class="ui form" (ngSubmit)="onSubmit()" #addUserForm="ngForm">
         <h2 class="ui dividing header">Add User</h2>
         <br>
         <div class="field">
             <div class="two fields">
                 <div class="field">
-                    <label>Full Name</label>
+                    <label>* Full Name</label>
                     <input type="text" name="fullName" placeholder="Full Name" [(ngModel)]="newUser.fullName" ngControl="fullName" required>
                 </div>
                 <div class="field">
-                    <label>User Name</label>
+                    <label>* User Name</label>
                     <input type="text" name="userName" placeholder="User Name" [(ngModel)]="newUser.userName" ngControl="userName" required>
                 </div>
             </div>
             <div class="two fields">
                 <div class="field">
-                  <label>Password</label>
+                  <label>* Password</label>
                     <input type="password" name="password" placeholder="Password" [(ngModel)]="newUser.password" ngControl="password" required>
                 </div>
                 <div class="field">
-                  <label>UID</label>
+                  <label>* UID</label>
                     <input type="text" name="UID" placeholder="UID" [(ngModel)]="newUser.UID" ngControl="UID" required>
                 </div>
+            </div>
+            <div class="two fields">
+                <div class="field">
+                  <label>* Email</label>
+                    <input type="text" name="emailAddress" placeholder="Email Address" [(ngModel)]="newUser.emailAddress" ngControl="emailAddress" required>
+                </div>
+
             </div>
         </div>
 
         <div class="field">
             <div class="two fields">
                 <div class="field">
-                  <label>Phone Number 1</label>
+                  <label>* Phone Number 1</label>
                     <input type="text" name="phoneNumber1" placeholder="Your First Phone Number " [(ngModel)]="newPhoneNumber1.phone" ngControl="phoneNumber1" required>
                 </div>
                 <div class="field">
-                    <label>Phone Number 2</label>
+                    <label>* Phone Number 2</label>
                     <input type="text" name="phoneNumber2" placeholder="Your Second Phone Number " [(ngModel)]="newPhoneNumber2.phone" ngControl="phoneNumber2" required>
                 </div>
             </div>
@@ -41,5 +48,8 @@
         <button type="submit" class="ui button" [disabled]="!addUserForm.form.valid">Register</button>
     </form>
 
+    <div *ngIf="userAdded">
+      <h2>User Added Successfully!</h2>
+    </div>
 
 </div>
