--- a/frontend/app/components/log-list.component.html
+++ b/frontend/app/components/log-list.component.html
@@ -1,5 +1,3 @@
-
-
 <div class="container">
     <table class="ui celled striped table">
         <thead>
@@ -28,3 +26,5 @@
         </tbody>
     </table>
 </div>
+
+<p id="dialog">test</p>
