--- a/frontend/app/components/nav-bar.component.html
+++ b/frontend/app/components/nav-bar.component.html
@@ -1,4 +1,5 @@
-<div class="ui inverted fixed menu">
+
+<div class="ui inverted menu">
   <div class="ui secondary pointing menu ">
     <a class="item" (click)="imageShow()">
       <img src="resources/images/vault-icon.png" />
