fixe Add User UID blank issue

--- a/frontend/app/components/add-user.component.html
+++ b/frontend/app/components/add-user.component.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="field">
                   <label>* UID</label>
-                    <input type="text" name="UID" placeholder="UID" [(ngModel)]="newUser.UID" ngControl="UID" required>
+                    <input type="text" name="uid" placeholder="UID" [(ngModel)]="newUser.uid" ngControl="uid" required>
                 </div>
             </div>
             <div class="two fields">
